Fix bullet point spacing on help text

--- a/src/components/crossDevice/MobileConnected/style.css
+++ b/src/components/crossDevice/MobileConnected/style.css
@@ -23,3 +23,7 @@
 .help {
   margin-bottom: 1.5rem;
 }
+
+.helpList {
+  padding-left: 1.5rem;
+}
